[fix] jumbo shift with better solution

--- a/css/style.css
+++ b/css/style.css
@@ -223,14 +223,20 @@ header{
 
 /* jumbotron */
 .jumbotron{
-    background-color:#b4d0e6 ;
+    background-color:#b4d0e6 ;  
     /* min-height: 500px; */
+}
+
+.jumbotron .medium{
+    position: relative;
+    top: 45px;
+
 }
 #layout-jumbo{
     display: flex;
     flex-wrap: wrap;
     min-height: 300px;
-    max-height: 350px;
+
 }
 
 
@@ -269,16 +275,15 @@ h1{
     border: 1px dashed black; */
 }
 #jumbo-img{
-    width: 110%;
-    position: relative;
-    top: 30px;
+    width: 100%;
+    margin-top: 30px;
 }
 
-.space{
+/* .space{
     min-height: 100px;
     background-color: white;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
+} */
 
 
 /* main */
